--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "awesome-typescript-loader": "3.0.0-beta.18",
     "concurrently": "3.1.0",
     "cross-env": "3.1.4",
+    "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.26.0",
     "lite-server": "2.2.2",
     "rimraf": "2.5.4",
     "source-map-loader": "0.1.6",
+    "style-loader": "0.13.1",
     "typescript": "2.1.5",
     "webpack": "1.14.0"
   },
