--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "webpack": "1.14.0"
   },
   "dependencies": {
+    "@types/object-assign": "4.0.30",
     "@types/react": "15.0.1",
     "@types/react-dom": "0.14.20",
+    "@types/react-redux": "4.4.36",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.2",
+    "redux": "3.6.0"
   }
 }
