--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lite": "lite-server",
     "webpack": "cross-env NODE_ENV=production webpack --config webpack.config.js --watch --profile --colors",
-    "clean": "rimraf dist",
+    "clean": "rimraf target",
     "prestart": "npm run clean",
-    "start": "concurrently \"npm run webpack\" \"npm run lite\""
+    "start": "concurrently \"npm run webpack\" \"node server.js\""
   },
   "keywords": [
     "react"
@@ -17,12 +17,14 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "3.0.0-beta.18",
+    "body-parser": "1.16.0",
     "concurrently": "3.1.0",
     "cross-env": "3.1.4",
     "css-loader": "0.26.1",
+    "express": "4.14.1",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.26.0",
-    "lite-server": "2.2.2",
+    "morgan": "1.7.0",
     "rimraf": "2.5.4",
     "source-map-loader": "0.1.6",
     "style-loader": "0.13.1",
@@ -30,13 +32,18 @@
     "webpack": "1.14.0"
   },
   "dependencies": {
+    "@types/es6-promise": "0.0.32",
+    "@types/isomorphic-fetch": "0.0.32",
     "@types/object-assign": "4.0.30",
     "@types/react": "15.0.1",
     "@types/react-dom": "0.14.20",
     "@types/react-redux": "4.4.36",
+    "es6-promise": "4.0.5",
+    "isomorphic-fetch": "2.2.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-redux": "5.0.2",
-    "redux": "3.6.0"
+    "redux": "3.6.0",
+    "redux-thunk": "2.2.0"
   }
 }
