--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "awesome-typescript-loader": "3.0.0-beta.18",
     "body-parser": "1.16.0",
     "concurrently": "3.1.0",
+    "connect-history-api-fallback": "1.3.0",
     "cross-env": "3.1.4",
     "css-loader": "0.26.1",
     "express": "4.14.1",
@@ -38,11 +39,13 @@
     "@types/react": "15.0.1",
     "@types/react-dom": "0.14.20",
     "@types/react-redux": "4.4.36",
+    "@types/react-router": "3.0.0",
     "es6-promise": "4.0.5",
     "isomorphic-fetch": "2.2.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-redux": "5.0.2",
+    "react-router": "3.0.2",
     "redux": "3.6.0",
     "redux-thunk": "2.2.0"
   }
